# 8rack-ai

./: .env.deploy  .env.example  .gitignore  Dockerfile  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml
config/: settings.py
config/decks/: eight_rack.yaml
config/decks/opponents/: affinity.yaml  amulet_titan.yaml  boros_energy.yaml  domain_zoo.yaml  eldrazi_tron.yaml  goryos_vengeance.yaml  jeskai_blink.yaml  neobrand.yaml  ruby_storm.yaml  yawgmoth.yaml
config/prompts/: eight_rack_pilot.md  rules_adjudicator.md
config/prompts/opponents/: affinity.md  amulet_titan.md  boros_energy.md  domain_zoo.md  eldrazi_tron.md  goryos_vengeance.md  jeskai_blink.md  neobrand.md  ruby_storm.md  yawgmoth.md
scripts/: play.py  run_match.py  sync_cards.py
src/eight_rack/: cli.py  display.py
src/eight_rack/agents/: base.py  heuristics.py  interactive.py  opponent.py  pilot.py
src/eight_rack/analytics/: dashboard.py  matchup.py
src/eight_rack/cards/: database.py  models.py
src/eight_rack/game/: actions.py  adjudicator.py  engine.py  state.py  tokens.py  triggers.py
src/eight_rack/game/resolver/: __init__.py  core.py  helpers.py  legal_actions.py  stack.py  tier1.py  (+3 more)
src/eight_rack/llm/: cache.py  client.py  cost_tracker.py
src/eight_rack/match/: logger.py  runner.py  sideboard.py  tournament.py
src/eight_rack/tuning/: deck_tuner.py  loop.py  metrics.py  play_tuner.py
tests/: test_display.py  test_engine_fixes.py  test_phase1.py  test_phase2.py  test_phase3.py  test_priority_saga.py  test_rules_engine.py  test_rules_gaps.py  test_tokens_fixes.py
